2007-10-06  Ulrich Drepper  <drepper@redhat.com>

	* nscd/nscd_helper.c (__nscd_cache_search): Prevent endless loops.

	[BZ #4407]
	* sysdeps/ieee754/dbl-64/e_lgamma_r.c: Fix *signgamp for -0.0.
	* sysdeps/ieee754/flt-32/e_lgammaf_r.c: Likewise.
	* sysdeps/ieee754/ldbl-96/e_lgammal_r.c: Likewise.
	* math/libm-test.inc: Add test for this case.

	[BZ #5010]
	* sunrpc/svc.c (struct svc_callout): Add sc_mapped element.
	(svc_register): Initialize sc_mapped.  Set to TRUE if call to
	map service succeeded.
	(svc_is_mapped): New function.
	(svc_unregister): Use it before trying to unmap service.

2007-10-05  Ulrich Drepper  <drepper@redhat.com>

	* timezone/zic.c: Update from tzcode2007h.

	[BZ #5063]
	* timezone/africa: Update from tzdata2007h.
	* timezone/antarctica: Likewise.
	* timezone/asia: Likewise.
	* timezone/australasia: Likewise.
	* timezone/europe: Likewise.
	* timezone/leapseconds: Likewise.
	* timezone/northamerica: Likewise.
	* timezone/southamerica: Likewise.
	* timzeone/zone.tab: Likewise.

	[BZ #5104]
	* elf/do-lookup.h (do_lookup_x): Don't ignore STT_COMMON symbols.

	[BZ #5113]
	* string/bits/string2.h (__strdup): Cast parameters to calloc to
	avoid warning with -Wconversion.
	(__strndup): Likewise.
	Half the patch by Christian Iseli <christian.iseli@licr.org>.

	[BZ #5112]
	* nscd/connections.c (restart): Don't resync if database is
	disabled.  Patch mostly by Brian De Wolf <bldewolf@csupomona.edu>.

	* sysdeps/gnu/netinet/tcp.h: Define TCP_MD5SIG, TCP_MD5SIG_MAXKEYLEN,
	struct tcp_md5sig.  Extend struct tcp_info according to recent kernels.

	* sysdeps/unix/sysv/linux/Makefile (sysdep_routines): Add eventfd,
	evetnfd_read, eventfd_write.
	* sysdeps/unix/sysv/linux/eventfd.c: New file.
	* sysdeps/unix/sysv/linux/eventfd_read.c: New file.
	* sysdeps/unix/sysv/linux/eventfd_write.c: New file.
	* sysdeps/unix/sysv/linux/sys/eventfd.h: New file.
	* sysdeps/unix/sysv/linux/Versions: Export eventfd, eventfd_read,
	eventfd_write for GLIBC_2.7.
